refactor: resolve the open SonarCloud issues
The quality gate failed on two bugs in the new bitmap-subtitle code: the
PNG encoder's Deflater was not closed through try-with-resources, and
the BitmapCue record held an array without array-aware equals, hashCode
and toString. The PGS and VobSub parsers are split into small readers
and cursors to get under the complexity limit; their output is
pixel-identical on real Blu-ray and DVD streams.

The older findings go with it: DeadLetterService's always-false null
check and its loop, TmdbSearchService (@Service, primitive boolean, a
Selection record instead of eight parameters), three over-complex
methods split without changing behaviour, a regex anchored against
backtracking, Spring AMQP's deprecated ListenerExecutionFailedException
in a test, and the Mockito/import/throws tidying in tests.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>